--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="./js/jquery-3.4.0.min.js"></script>
  
-  <title>Адаптив, задание № 6</title>
+  <title>JS, задание № 4</title>
 </head>
 <body>
   <header class="header">
