--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
   </header>
 
   <div class="main">
-    <div class="new__message" >
-      <b class="x" id="x" onclick="(B())">x</b>
+    <div class='border' id="mess">
+
       <p id="new__message">Сообщение 123</p>
     </div>
-      <div class="list__message" id="list__message">
+      <div class="border" id="field">
 
       </div> 
       <div class="input__message">
         <input type="text" id="input__message" placeholder="введите текст">
       </div>
         <div class="send__message">
-          <button id="send" onclick="(A())">Send</button>
+          <button id="send">Send</button>
         </div>
   </div>
 
